# M13-Python3-Modules-Collection-made-in-AI

./: .gitignore  AI_ENHANCEMENT_SUMMARY.md  CHANGELOG.md  CHANGES_LOG.md  CONTRIBUTING.md  FINAL_SUMMARY.txt  IMPLEMENTATION_INDEX.md  LICENSE  PROJECT_COMPLETION_REPORT.md  PROJECT_REORGANIZATION_COMPLETE.md  PYPI_CONFIGURATION.md  PYPI_PREPARATION_COMPLETE.md  PYPI_PREPARATION_SUMMARY.md  PYPI_PUBLICATION_GUIDE.md  PYPI_QUICK_REFERENCE.md  PYPI_READY.txt  PyPI_FINAL_SUMMARY.txt  QUICKSTART.md  README.md  TEST_AND_GUI_IMPLEMENTATION_SUMMARY.md  __init__.py  build.bat  build.py  build.sh  build_and_upload.bat  build_and_upload.sh  commands.bat  conftest.py  diagnose_build.py  diagnose_tests.py  generate_complete_tests.py  generate_gui_menus.py  pyproject.toml  pytest.ini  run.py  run_gui.py  run_tests.py  setup.cfg  setup.py  update_pyproject.py  (+3 more)
Utilities/: __init__.py  run.py  run_gui.py
Utilities/PydocsExport/: ADDITIONAL_FORMATS_v1_1_1.md  COMPREHENSIVE_HELP_ENHANCEMENT.md  COMPREHENSIVE_HELP_README.txt  CONTRIBUTING.md  EasyPydocsExport.py  PROJECT_COMPLETE.txt  PROJECT_OVERVIEW.py  PROJECT_SUMMARY.txt  PydocsExport.py  QUICKSTART.md  README.md  START_HERE.md  SUPPORTED_FORMATS.md  __init__.py  conftest.py  examples.py  run.py  test_no_external.py  test_no_external_launch.py  test_progress.py  test_safe_export.py
Utilities/PydocsExport/docs/: README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_IT.md  README_PT.md  __init__.py
Utilities/PydocsExport/src/: __init__.py  exporter.py  formatter.py  index_manager.py
VariableExtender/: __init__.py  run.py  run_gui.py
VariableExtender/MenuMaker/: README.md  __init__.py  conftest.py  example.py  menu.py  run.py  run_gui.py  test_menumaker.py  test_menumaker_complete.py  test_menumaker_comprehensive.py
VariableExtender/MenuMaker/docs/: CHANGELOG.md  DOCUMENTATION_PT.md
VariableExtender/Multidimention_table/: README.md  __init__.py  conftest.py  example_multitable.py  multidim_table.py  multitable.py  run.py  run_gui.py  test_multidim_table.py  test_multitable.py  test_multitable_complete.py  test_multitable_comprehensive.py
VariableExtender/Multidimention_table/docs/: CREATION_SUMMARY.txt  DOCUMENTATION_EN.md  DOCUMENTATION_FR.md  DOCUMENTATION_PT.md  MULTITABLE_DOCUMENTATION.md
VariableExtender/Multidimention_table/multidimention_paint/: INDEX.py  MULTILINGUAL_DOCUMENTATION.md  README_DE.md  README_EN.md  README_FR.md  README_IT.md  README_PT.md  __init__.py  documentation_generator.py  example.py  generate_docs.py  paint.py  points.py  quick_test.py  selection.py  shapes.py  test_multidimension_paint.py  utils.py
VariableExtender/generic_tree/: FILES_MANIFEST.txt  __init__.py  conftest.py  generic_tree.py  run.py  run_gui.py  test_generic_tree.py  test_generic_tree_complete.py  test_generic_tree_comprehensive.py
VariableExtender/generic_tree/docs/: GENERIC_TREE_README_EN.md  GENERIC_TREE_README_FR.md  GENERIC_TREE_README_PT.md  GENERIC_TREE_SUMMARY_EN.txt  GENERIC_TREE_SUMMARY_ES.txt  INDEX_MULTILINGUAL.txt  README_PT.md
Various list files (No Modules)/Various/: big_colors_palette_ini_format.ini
varplus/: .gitignore  DOCUMENTATION_INDEX.md  FINAL_INIT_CHECKLIST.md  FINAL_VERIFICATION_REPORT.md  INIT_FILES_UPDATE_REPORT.md  MANIFEST.in  PKG_INFO.txt  PROJECT_FINAL_STATUS.md  QUICK_COMMANDS.txt  README.md  SETUP_COMPLETE.txt  __init__.py  tox.ini  validate_init_files.py  validate_pypi_readiness.py
varplus/MenuMaker/: COMPLETION_SUMMARY.md  DOCUMENTATION_EN.md  DOCUMENTATION_FR.md  __init__.py  example.py  menu.py  test_menumaker.py
varplus/Multidimention_table/: __init__.py  example_multitable.py  multidim_table.py  multitable.py  test_multidim_table.py  test_multitable.py
varplus/Multidimention_table/multidimention_paint/: DOCUMENTATION_FR.md  INDEX.py  INDEX_DOCUMENTATION.md  MULTILINGUAL_DOCUMENTATION.md  PROJECT_SUMMARY_FR.md  README.md  README_ES.md  README_ZH.md  __init__.py  documentation_generator.py  example.py  generate_docs.py  paint.py  points.py  quick_test.py  selection.py  shapes.py  test_multidimension_paint.py  utils.py
varplus/generic_tree/: FILES_INDEX.txt  GENERIC_TREE_README_DE.txt  GENERIC_TREE_SUMMARY_IT.txt  GENERIC_TREE_SUMMARY_ZH.txt  QUICK_START_MULTILINGUAL.txt  README.md  __init__.py  generic_tree.py  test_generic_tree.py
