[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "variableplus"
version = "1.0.0"
description = "Complete Python package collection: n-ary trees, menus, arrays, geometry"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Musclor13"},
]
keywords = [
    "tree",
    "data-structure",
    "n-ary",
    "menu",
    "interface",
    "multidimensional",
    "array",
    "geometry",
    "shapes",
    "algorithm",
    "collection",
    "package",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: Spanish",
    "Natural Language :: German",
    "Natural Language :: Italian",
    "Natural Language :: Chinese (Simplified)",
]

[project.urls]
Homepage = "https://github.com/Musclor13/variableplus"
Documentation = "https://github.com/Musclor13/variableplus/wiki"
Repository = "https://github.com/Musclor13/variableplus.git"
"Bug Tracker" = "https://github.com/Musclor13/variableplus/issues"
Changelog = "https://github.com/Musclor13/variableplus/releases"

[tool.setuptools]
packages = ["generic_tree", "MenuMaker", "Multidimention_table"]
include-package-data = true

[tool.setuptools.package-data]
generic_tree = ["*.py", "*.md", "*.txt", "*.json"]
MenuMaker = ["*.py", "*.md", "*.txt"]
Multidimention_table = ["*.py", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
