[metadata]
name = M13aiCollection
version = 0.0.1
author = AI Assistant & Musclor13
author_email = None
description = MADE IN AI - Collection of multiple module. Currently: varplus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Musclorman/M13-Python3-Modules-Collection-made-in-AI
project_urls =
    Bug Tracker = https://github.com/Musclorman/M13-Python3-Modules-Collection-made-in-AI/issues
    Documentation = https://github.com/Musclorman/M13-Python3-Modules-Collection-made-in-AI/wiki
    Source Code = https://github.com/Musclorman/M13-Python3-Modules-Collection-made-in-AI
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = .

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,venv,build,dist
ignore = E203, W503

[isort]
profile = black
line_length = 100
skip_gitignore = True

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
